# pypika-stubs

./: .pre-commit-config.yaml  pyproject.toml  readme.md  taskfile.yaml
.github/workflows/: lint.yaml  release.yaml
pypika-stubs/: __init__.pyi  analytics.pyi  dialects.pyi  enums.pyi  functions.pyi  pseudocolumns.pyi  queries.pyi  terms.pyi  utils.pyi
pypika-stubs/clickhouse/: array.pyi  condition.pyi  dates_and_times.pyi  nullable_arg.pyi  search_string.pyi  type_conversion.pyi
