[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pypika-stubs"
version = "0.48.0a0"
description = "pypika typing stubs"
authors = [
    { name = "trim21", email = "trim21me@gmail.com" },
]
readme = 'readme.md'
license = { text = 'MIT' }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Typing :: Typed"
]

requires-python = "~=3.8"

dependencies = [
    'pypika>=0.48.9,<0.49.0',
]

[project.optional-dependencies]
dev = [
    'pre-commit==3.8.0; python_version >= "3.9"',
    'mypy==1.11.1; python_version >= "3.9"',
]

[project.urls]
Homepage = "https://github.com/trim21/pypika-stubs"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
show_error_codes = true

platform = 'unix'

[tool.black]
target-version = ['py312']

[tool.ruff]
target-version = "py312"
